--- a/masking_data.ipynb
+++ b/masking_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,13 +26,14 @@
     "#from torchvision import models as torchvision_models\n",
     "import mambular\n",
     "import dino.utils as utils\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
     "# import vision_transformer as vits\n",
-    "# from vision_transformer import DINOHead"
+    "from dino.vision_transformer import DINOHead"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +50,8 @@
     "    parser = argparse.ArgumentParser('DINO', add_help=False)\n",
     "\n",
     "    # Model parameters\n",
-    "    parser.add_argument('--arch', default='vit_small', type=str,\n",
-    "        choices=['vit_tiny', 'vit_small', 'vit_base', 'xcit', 'deit_tiny', 'deit_small'] \\\n",
-    "                + torchvision_archs + torch.hub.list(\"facebookresearch/xcit:main\"),\n",
+    "    parser.add_argument('--arch', default='MLPRegressor', type=str,\n",
+    "        choices=mamba_archs,\n",
     "        help=\"\"\"Name of architecture to train. For quick experiments with ViTs,\n",
     "        we recommend using vit_tiny or vit_small.\"\"\")\n",
     "    parser.add_argument('--patch_size', default=16, type=int, help=\"\"\"Size in pixels\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,16 +226,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "x = df.iloc[:, :-1]\n",
-    "y = df.iloc[:, -1]"
+    "class TabularDataset(Dataset):\n",
+    "    def __init__(self, data, target_col, mask_studetn, mask_teacher):\n",
+    "        self.data = data.drop(target_col, axis=1)\n",
+    "        self.mask = DataAugmentationPV()\n",
+    "        self.target = data[target_col]\n",
+    "        self.transforms = transforms\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        x = self.data.iloc[idx].values.astype('float32')\n",
+    "        y = self.target.iloc[idx]\n",
+    "\n",
+    "        if self.transforms:\n",
+    "            x = self.transforms(x)\n",
+    "\n",
+    "        return torch.tensor(x), torch.tensor(y)"
    ]
   },
   {
@@ -251,87 +260,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "TensorDataset.__init__() got an unexpected keyword argument 'transforms'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[42], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTensorDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mas_tensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mas_tensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtransforms\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtransform\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: TensorDataset.__init__() got an unexpected keyword argument 'transforms'"
-     ]
-    }
-   ],
-   "source": [
-    "dataset = torch.utils.data.TensorDataset(torch.as_tensor(x.values, dtype=torch.float32),torch.as_tensor(y.values, dtype=torch.float32), transforms=transform)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ True, False, False,  ...,  True, False, False],\n",
-       "        [False, False, False,  ..., False, False,  True],\n",
-       "        [False, False,  True,  ..., False, False, False],\n",
+       "tensor([[True, True, True,  ..., True, True, True],\n",
+       "        [True, True, True,  ..., True, True, True],\n",
+       "        [True, True, True,  ..., True, True, True],\n",
        "        ...,\n",
-       "        [False, False, False,  ..., False, False, False],\n",
-       "        [False,  True, False,  ..., False, False,  True],\n",
-       "        [ True, False,  True,  ..., False, False,  True]])"
+       "        [True, True, True,  ..., True, True, True],\n",
+       "        [True, True, True,  ..., True, True, True],\n",
+       "        [True, True, True,  ..., True, True, True]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_dataset = torch.utils.data.TensorDataset(torch.as_tensor(x_train.values, dtype=torch.float32),torch.as_tensor(y_train.values, dtype=torch.float32))\n",
-    "val_dataset = torch.utils.data.TensorDataset(torch.as_tensor(x_val.values, dtype=torch.float32),torch.as_tensor(y_val.values, dtype=torch.float32))\n",
-    "test_dataset = torch.utils.data.TensorDataset(torch.as_tensor(x_test.values, dtype=torch.float32),torch.as_tensor(y_test.values, dtype=torch.float32))\n",
-    "\n",
-    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=128, shuffle=True)\n",
-    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=128, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=128, shuffle=True)"
+    "transform.teacher_masking"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## teacher and student networks\n",
+    "def st_te_nets():\n",
+    "    student = mambular.models.MLPRegressor()\n",
+    "    teacher = mambular.models.MLPRegressor()\n",
+    "    embed_dim = 64\n",
     "\n",
-    "    dataset = datasets.ImageFolder(args.data_path, transform=transform)\n",
-    "    sampler = torch.utils.data.DistributedSampler(dataset, shuffle=True)\n",
-    "    data_loader = torch.utils.data.DataLoader(\n",
-    "        dataset,\n",
-    "        sampler=sampler,\n",
-    "        batch_size=args.batch_size_per_gpu,\n",
-    "        num_workers=args.num_workers,\n",
-    "        pin_memory=True,\n",
-    "        drop_last=True,\n",
-    "    )"
+    "    # multi-crop wrapper handles forward with inputs of different resolutions\n",
+    "    student = utils.MultiCropWrapper(student, DINOHead(\n",
+    "        embed_dim,\n",
+    "        65536,\n",
+    "        use_bn=False,\n",
+    "        norm_last_layer=True,\n",
+    "    ))\n",
+    "    teacher = utils.MultiCropWrapper(\n",
+    "        teacher,\n",
+    "        DINOHead(embed_dim, 65536, False),\n",
+    "    )\n",
+    "    # move networks to gpu\n",
+    "    student, teacher = student.cuda(), teacher.cuda()\n",
+    "    return student, teacher"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/m16r2/anaconda3/envs/farid/lib/python3.10/site-packages/torch/nn/utils/weight_norm.py:143: FutureWarning: `torch.nn.utils.weight_norm` is deprecated in favor of `torch.nn.utils.parametrizations.weight_norm`.\n",
+      "  WeightNorm.apply(module, name, dim)\n"
+     ]
+    }
+   ],
    "source": [
-    "transform = DataAugmentationDINO(\n",
-    "        args.global_crops_scale,\n",
-    "        args.local_crops_scale,\n",
-    "        args.local_crops_number,\n",
-    "    )"
+    "s, t = st_te_nets()"
    ]
   }
  ],
